turbopack/crates/turbopack-tests/tests/snapshot/source_maps/invalid/output/4e721_crates_turbopack-tests_tests_snapshot_source_maps_invalid_input_index_66486b.js
(globalThis.TURBOPACK = globalThis.TURBOPACK || []).push([
    "output/4e721_crates_turbopack-tests_tests_snapshot_source_maps_invalid_input_index_66486b.js",
    {},
    {"otherChunks":["output/4e721_crates_turbopack-tests_tests_snapshot_source_maps_invalid_input_index_fc734e.js"],"runtimeModuleIds":["[project]/turbopack/crates/turbopack-tests/tests/snapshot/source_maps/invalid/input/index.js [test] (ecmascript)"]}
]);
// Dummy runtime